# data-engineering-toolkit

./: pyproject.toml  requirements.txt
data_engineering_toolkit/aws/: s3.py
tests/aws/: test_s3.py
