[tool.poetry]
name = "data-engineering-toolkit"
version = "0.1.0"
description = ""
authors = ["MaxEhrhart <maxserhard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.36.6"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
