[tool.poetry]
name = "data-engineering-toolkit"
version = "0.1.0"
description = "Data Engineering Toolkit"
authors = ["MaxEhrhart <maxserhard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.36.6"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
pytest = "^8.3.4"
flake8 = "^7.1.1"
black = "^24.10.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
requests-mock = "^1.12.1"
mypy = "^1.14.1"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
